# tap-shopify

./: CHANGELOG.md  README.md  pyproject.toml
tap_shopify/: __init__.py
tap_shopify/schemas/: definitions.json
tap_shopify/streams/: base.py  order_refunds.py
