[tool.poetry]
name = "tap-shopify"
version = "1.1.13"
description = "Singer.io tap for extracting Shopify data"
authors = ["Stitch"]
homepage = "https://singer.io"
repository = "http://github.com/singer-io/tap-shopify"
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "~3.8.10"
ShopifyAPI = "~3.1.0"
singer-python = "~5.4.1"

[tool.poetry.dev-dependencies]
pylint = "~2.7.4"
ipdb = "~0.13.9"
requests = "~2.20.0"
nose = "~1.3.7"

[tool.poetry.plugins."console_scripts"]
tap-shopify = "tap_shopify:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
